--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="location">Location</string>
     <string name="repositories">Repository</string>
     <string name="usrnotfound">Username Not Found</string>
+    <string name="setting">Setting</string>
+    <string name="favourite">Favourite</string>
+    <string name="reminder">Reminder</string>
+    <string name="delete">Delete</string>
+    <string name="language">Language</string>
+    <string name="active">active</string>
+    <string name="nonactive">Non Active</string>
+    <string name="notif">Open Your Apps</string>
 </resources>
