--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="active">active</string>
     <string name="nonactive">Non Active</string>
     <string name="notif">Open Your Apps</string>
+    <string name="unknown">No Data</string>
 </resources>
